[package]
name = "from_int"
version = "0.1.2"
authors = ["Nicholas Donnelly <nick@donnelly.cc>"]
description = "A package to easily add a from_int method to enums with #[derive(FromInt)]"
license = "MIT"
repository = "https://github.com/nickdonnelly/from_int"

[dependencies]
from_int_derive = { version = "0.1.2", path = "from_int_derive" }
